--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -140,6 +140,10 @@
   <ItemGroup>
     <ClInclude Include="Cards.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Cards.cpp" />
+    <ClCompile Include="siete-y-medio.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
